--- a/src/Makefile.test.include
+++ b/src/Makefile.test.include
@@ -85,7 +85,8 @@ BITCOIN_TESTS =\
   test/versionbits_tests.cpp \
   test/uint256_tests.cpp \
   test/univalue_tests.cpp \
-  test/util_tests.cpp
+  test/util_tests.cpp \
+  stats/test/stats_tests.cpp
 
 if ENABLE_WALLET
 BITCOIN_TESTS += \
