Drop IO priority to idle while reading blocks for peer requests and startup verification

--- a/configure.ac
+++ b/configure.ac
@@ -1114,6 +1114,25 @@ AC_COMPILE_IFELSE([AC_LANG_SOURCE([
   [AC_MSG_RESULT([no])]
 )
 
+AC_MSG_CHECKING(for ioprio syscalls)
+AC_COMPILE_IFELSE([
+  AC_LANG_PROGRAM([[
+    #define _GNU_SOURCE
+    #include <unistd.h>
+    #include <sys/syscall.h>
+  ]],[[
+    int x = syscall(SYS_ioprio_get, 1, 0);
+    syscall(SYS_ioprio_set, 1, 0, x);
+  ]])
+],[
+  have_ioprio_syscall=yes
+  AC_DEFINE(HAVE_IOPRIO_SYSCALL,1,[Define this symbol if you have ioprio syscalls])
+],[
+  have_ioprio_syscall=no
+])
+AC_MSG_RESULT($have_ioprio_syscall)
+AM_CONDITIONAL([HAVE_IOPRIO_SYSCALL], [test "$have_ioprio_syscall" = "yes"])
+
 if test "$use_thread_local" = "yes" || test "$use_thread_local" = "auto"; then
   TEMP_LDFLAGS="$LDFLAGS"
   LDFLAGS="$TEMP_LDFLAGS $PTHREAD_CFLAGS"
