--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -276,6 +276,7 @@ BITCOIN_CORE_H = \
   util/golombrice.h \
   util/hash_type.h \
   util/hasher.h \
+  util/ioprio.h \
   util/macros.h \
   util/message.h \
   util/moneystr.h \
@@ -701,6 +702,10 @@ libbitcoin_util_a_SOURCES = \
 
 if USE_LIBEVENT
 libbitcoin_util_a_SOURCES += util/url.cpp
+endif
+
+if HAVE_IOPRIO_SYSCALL
+libbitcoin_util_a_SOURCES += util/ioprio.cpp
 endif
 
 # cli: shared between bitcoin-cli and bitcoin-qt
