--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -681,6 +681,7 @@ libbitcoin_util_a_SOURCES = \
   util/fees.cpp \
   util/getuniquepath.cpp \
   util/hasher.cpp \
+  util/ioprio.cpp \
   util/sock.cpp \
   util/syserror.cpp \
   util/system.cpp \
@@ -702,10 +703,6 @@ libbitcoin_util_a_SOURCES = \
 
 if USE_LIBEVENT
 libbitcoin_util_a_SOURCES += util/url.cpp
-endif
-
-if HAVE_IOPRIO_SYSCALL
-libbitcoin_util_a_SOURCES += util/ioprio.cpp
 endif
 
 # cli: shared between bitcoin-cli and bitcoin-qt
