--- a/.gitignore
+++ b/.gitignore
@@ -12,19 +12,30 @@ src/test_peercoin
 src/test/test_ppcoin
 src/qt/test/test_ppcoin-qt
 
+# autoreconf
 Makefile.in
 aclocal.m4
 autom4te.cache/
+build-aux/config.guess
+build-aux/config.sub
+build-aux/depcomp
+build-aux/install-sh
+build-aux/ltmain.sh
+build-aux/m4/libtool.m4
+build-aux/m4/lt~obsolete.m4
+build-aux/m4/ltoptions.m4
+build-aux/m4/ltsugar.m4
+build-aux/m4/ltversion.m4
+build-aux/missing
+build-aux/compile
+build-aux/test-driver
 config.log
 config.status
 configure
-src/.deps/
-src/Makefile.in
-src/bitcoin-config.h
-src/bitcoin-config.h.in
-src/build-aux/
-src/qt/Makefile.in
-src/stamp-h1
+libtool
+src/config/bitcoin-config.h
+src/config/bitcoin-config.h.in
+src/config/stamp-h1
 share/setup.nsi
 share/qt/Info.plist
 
