--- a/.gitignore
+++ b/.gitignore
@@ -33,9 +33,9 @@ config.log
 config.status
 configure
 libtool
-src/config/bitcoin-config.h
-src/config/bitcoin-config.h.in
-src/config/stamp-h1
+src/bitcoin-config.h
+src/bitcoin-config.h.in
+src/stamp-h1
 share/setup.nsi
 share/qt/Info.plist
 
