fixes for compilation
slight changes to signature validation

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -111,7 +111,7 @@ BITCOIN_CORE_H = \
   memusage.h \
   merkleblock.h \
   miner.h \
-  minerwhitelist/minerwhitelist.h \
+  minerwhitelist.h \
   net.h \
   net_processing.h \
   netaddress.h \
@@ -196,7 +196,7 @@ libbitcoin_server_a_SOURCES = \
   dbwrapper.cpp \
   merkleblock.cpp \
   miner.cpp \
-  minerwhitelist/minerwhitelist.cpp \
+  minerwhitelist.cpp \
   net.cpp \
   net_processing.cpp \
   noui.cpp \
