Add RPC long poll notifications

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -129,6 +129,7 @@ BITCOIN_CORE_H = \
   rpc/blockchain.h \
   rpc/client.h \
   rpc/mining.h \
+  rpc/notifications.h \
   rpc/protocol.h \
   rpc/safemode.h \
   rpc/server.h \
@@ -210,6 +211,7 @@ libbitcoin_server_a_SOURCES = \
   rpc/mining.cpp \
   rpc/misc.cpp \
   rpc/net.cpp \
+  rpc/notifications.cpp \
   rpc/rawtransaction.cpp \
   rpc/safemode.cpp \
   rpc/server.cpp \
