pointed gitian to correct repo

--- a/contrib/gitian-descriptors/gitian-osx.yml
+++ b/contrib/gitian-descriptors/gitian-osx.yml
@@ -28,7 +28,7 @@ packages:
 - "python-setuptools"
 - "fonts-tuffy"
 remotes:
-- "url": "https://github.com/iop/iop.git"
+- "url": "https://github.com/Internet-of-People/iop-hd.git"
   "dir": "iop"
 files:
 - "MacOSX10.11.sdk.tar.gz"
