--- a/contrib/gitian-descriptors/gitian-win.yml
+++ b/contrib/gitian-descriptors/gitian-win.yml
@@ -22,7 +22,7 @@ packages:
 - "ca-certificates"
 - "python"
 remotes:
-- "url": "https://github.com/iop/iop.git"
+- "url": "https://github.com/Internet-of-People/iop-hd.git"
   "dir": "iop"
 files: []
 script: |
