--- a/configure.ac
+++ b/configure.ac
@@ -6,9 +6,9 @@ define(_CLIENT_VERSION_REVISION, 0)
 define(_CLIENT_VERSION_BUILD, b1)
 define(_CLIENT_VERSION_IS_RELEASE, true)
 define(_COPYRIGHT_YEAR, 2017)
-define(_COPYRIGHT_HOLDERS,[The %s developers])
-define(_COPYRIGHT_HOLDERS_SUBSTITUTION,[[IoP Core]])
-AC_INIT([IoP Core],[_CLIENT_VERSION_MAJOR._CLIENT_VERSION_MINOR._CLIENT_VERSION_REVISION],[https://github.com/Internet-of-People/iop-hd/issues],[iop],[https://iop.cash/])
+define(_COPYRIGHT_HOLDERS,[%s Ventures LLC])
+define(_COPYRIGHT_HOLDERS_SUBSTITUTION,[[IoP]])
+AC_INIT([IoP Core],[_CLIENT_VERSION_MAJOR._CLIENT_VERSION_MINOR._CLIENT_VERSION_REVISION],[https://github.com/Internet-of-People/iop-hd/issues],[iop-hd],[https://iop.cash/])
 AC_CONFIG_SRCDIR([src/validation.cpp])
 AC_CONFIG_HEADERS([src/config/iop-config.h])
 AC_CONFIG_AUX_DIR([build-aux])
