Added SystemnodeList class

--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -39,6 +39,7 @@ QT_FORMS_UI = \
   qt/forms/sendcoinsentry.ui \
   qt/forms/signverifymessagedialog.ui \
   qt/forms/thronelist.ui \
+  qt/forms/systemnodelist.ui \
   qt/forms/transactiondescdialog.ui \
   qt/forms/multisigaddressentry.ui \
   qt/forms/multisigdialog.ui \
@@ -80,6 +81,7 @@ QT_MOC_CPP = \
   qt/moc_signverifymessagedialog.cpp \
   qt/moc_splashscreen.cpp \
   qt/moc_thronelist.cpp \
+  qt/moc_systemnodelist.cpp \
   qt/moc_trafficgraphwidget.cpp \
   qt/moc_transactiondesc.cpp \
   qt/moc_transactiondescdialog.cpp \
@@ -153,6 +155,7 @@ BITCOIN_QT_H = \
   qt/signverifymessagedialog.h \
   qt/splashscreen.h \
   qt/thronelist.h \
+  qt/systemnodelist.h \
   qt/trafficgraphwidget.h \
   qt/transactiondesc.h \
   qt/transactiondescdialog.h \
@@ -276,6 +279,7 @@ BITCOIN_QT_CPP += \
   qt/sendcoinsentry.cpp \
   qt/signverifymessagedialog.cpp \
   qt/thronelist.cpp \
+  qt/systemnodelist.cpp \
   qt/transactiondesc.cpp \
   qt/transactiondescdialog.cpp \
   qt/transactionfilterproxy.cpp \
