--- a/src/Makefile.qttest.include
+++ b/src/Makefile.qttest.include
@@ -24,11 +24,11 @@ TEST_QT_H = \
   qt/test/paymentservertests.h \
   qt/test/wallettests.h
 
-  test/test_iop.cpp \
 TEST_IOP_CPP = \
+  test/test_iop.cpp
 
-  test/test_iop.h \
 TEST_IOP_H = \
+  test/test_iop.h
 
 qt_test_test_iop_qt_CPPFLAGS = $(AM_CPPFLAGS) $(IOP_INCLUDES) $(IOP_QT_INCLUDES) \
   $(QT_INCLUDES) $(QT_TEST_INCLUDES) $(PROTOBUF_CFLAGS)
