--- a/contrib/gitian-descriptors/gitian-win.yml
+++ b/contrib/gitian-descriptors/gitian-win.yml
@@ -23,7 +23,7 @@ packages:
 - "zip"
 reference_datetime: "2017-01-01 00:00:00"
 remotes:
-- "url": "https://github.com/einalex/syscoin2.git"
+- "url": "https://github.com/syscoin/syscoin2.git"
   "dir": "syscoin"
 files: []
 script: |
