--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -262,9 +262,8 @@ crypto_libbitcoin_crypto_a_SOURCES = \
   crypto/chacha20.h \
   crypto/chacha20.cpp \
   crypto/common.h \
-  crypto/hmac_sha256.cpp \
+  crypto/hmac_sha.h \
   crypto/hmac_sha256.h \
-  crypto/hmac_sha512.cpp \
   crypto/hmac_sha512.h \
   crypto/ripemd160.cpp \
   crypto/ripemd160.h \
