--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -4,9 +4,9 @@ AM_CPPFLAGS += -I$(top_srcdir)/src \
   $(PROTOBUF_CFLAGS) \
   $(QR_CFLAGS)
 bin_PROGRAMS += qt/peercoin-qt
-noinst_LIBRARIES += qt/libppcoinqt.a
+noinst_LIBRARIES += qt/libpeercoinqt.a
 
-# ppcoin qt core #
+# peercoin qt core #
 QT_TS = \
   qt/locale/bitcoin_af_ZA.ts \
   qt/locale/bitcoin_ar.ts \
@@ -117,7 +117,7 @@ QT_MOC_CPP = \
   qt/moc_rpcconsole.cpp \
   qt/moc_overviewpage.cpp
 
-PPCOIN_MM = \
+PEERCOIN_MM = \
   qt/macdockiconhandler.mm \
   qt/macnotificationhandler.mm
 
@@ -128,7 +128,7 @@ QT_MOC = qt/bitcoin.moc \
 QT_QRC_CPP = qt/qrc_bitcoin.cpp
 QT_QRC = qt/bitcoin.qrc
 
-PPCOIN_QT_H = \
+PEERCOIN_QT_H = \
   qt/aboutdialog.h \
   qt/addressbookpage.h \
   qt/addresstablemodel.h \
@@ -218,7 +218,7 @@ RES_ICONS = \
   qt/res/icons/peercoin.ico \
   qt/res/icons/bitcoin_testnet.ico
 
-PPCOIN_QT_CPP = \
+PEERCOIN_QT_CPP = \
   qt/bitcoin.cpp \
   qt/bitcoinaddressvalidator.cpp \
   qt/bitcoinamountfield.cpp \
@@ -238,7 +238,7 @@ PPCOIN_QT_CPP = \
   qt/splashscreen.cpp 
 
 if ENABLE_WALLET
-PPCOIN_QT_CPP += \
+PEERCOIN_QT_CPP += \
   qt/aboutdialog.cpp \
   qt/addressbookpage.cpp \
   qt/addresstablemodel.cpp \
@@ -273,15 +273,15 @@ RES_IMAGES = \
 
 RES_MOVIES = qt/res/movies/update_spinner.mng
 
-PPCOIN_RC = qt/res/bitcoin-qt-res.rc
+PEERCOIN_RC = qt/res/bitcoin-qt-res.rc
 
-qt_libppcoinqt_a_CPPFLAGS = $(AM_CPPFLAGS) $(QT_INCLUDES) \
+qt_libpeercoinqt_a_CPPFLAGS = $(AM_CPPFLAGS) $(QT_INCLUDES) \
   -I$(top_srcdir)/src/qt/forms $(QT_DBUS_INCLUDES)
-qt_libppcoinqt_a_CXXFLAGS = $(AM_CXXFLAGS) $(QT_PIE_FLAGS)
-qt_libppcoinqt_a_SOURCES = $(PPCOIN_QT_CPP) $(PPCOIN_QT_H) $(QT_FORMS_UI) \
+qt_libpeercoinqt_a_CXXFLAGS = $(AM_CXXFLAGS) $(QT_PIE_FLAGS)
+qt_libpeercoinqt_a_SOURCES = $(PEERCOIN_QT_CPP) $(PEERCOIN_QT_H) $(QT_FORMS_UI) \
   $(QT_QRC) $(QT_TS) $(RES_ICONS) $(RES_IMAGES) $(RES_MOVIES)
 
-nodist_qt_libppcoinqt_a_SOURCES = $(QT_MOC_CPP) $(QT_MOC) \
+nodist_qt_libpeercoinqt_a_SOURCES = $(QT_MOC_CPP) $(QT_MOC) \
   $(QT_QRC_CPP)
 
 # forms/foo.h -> forms/ui_foo.h
@@ -290,7 +290,7 @@ QT_FORMS_H=$(join $(dir $(QT_FORMS_UI)),$(addprefix ui_, $(notdir $(QT_FORMS_UI:
 # Most files will depend on the forms and moc files as includes. Generate them
 # before anything else.
 $(QT_MOC): $(QT_FORMS_H)
-$(qt_libppcoinqt_a_OBJECTS) $(qt_bppcoin_qt_OBJECTS) : | $(QT_MOC)
+$(qt_libpeercoinqt_a_OBJECTS) $(qt_bpeercoin_qt_OBJECTS) : | $(QT_MOC)
 
 #Generating these with a half-written protobuf header leads to wacky results.
 #This makes sure it's done.
@@ -303,19 +303,19 @@ qt_peercoin_qt_CPPFLAGS = $(AM_CPPFLAGS) $(QT_INCLUDES) \
 qt_peercoin_qt_CXXFLAGS = $(AM_CXXFLAGS) $(QT_PIE_FLAGS)
 qt_peercoin_qt_SOURCES = qt/bitcoin.cpp
 if TARGET_DARWIN
-  qt_peercoin_qt_SOURCES += $(PPCOIN_MM)
+  qt_peercoin_qt_SOURCES += $(PEERCOIN_MM)
 endif
 if TARGET_WINDOWS
-  qt_peercoin_qt_SOURCES += $(PPCOIN_RC)
+  qt_peercoin_qt_SOURCES += $(PEERCOIN_RC)
 endif
 if USE_QRCODE
   qt_peercoin_qt_SOURCES += qt/qrcodedialog.cpp
 endif
-qt_peercoin_qt_LDADD = qt/libppcoinqt.a $(LIBPPCOIN_SERVER) 
+qt_peercoin_qt_LDADD = qt/libpeercoinqt.a $(LIBPEERCOIN_SERVER) 
 if ENABLE_WALLET
-qt_peercoin_qt_LDADD += $(LIBPPCOIN_WALLET) 
+qt_peercoin_qt_LDADD += $(LIBPEERCOIN_WALLET) 
 endif
-qt_peercoin_qt_LDADD += $(LIBPPCOIN_CLI) $(LIBPPCOIN_COMMON) $(LIBLEVELDB) $(LIBMEMENV) \
+qt_peercoin_qt_LDADD += $(LIBPEERCOIN_CLI) $(LIBPEERCOIN_COMMON) $(LIBLEVELDB) $(LIBMEMENV) \
   $(BOOST_LIBS) $(QT_LIBS) $(QT_DBUS_LIBS) $(QR_LIBS) $(BDB_LIBS)
 qt_peercoin_qt_LDFLAGS = $(AM_LDFLAGS) $(QT_LDFLAGS)
 
@@ -324,11 +324,11 @@ QT_QM=$(QT_TS:.ts=.qm)
 
 .SECONDARY: $(QT_QM)
 
-qt/bitcoinstrings.cpp: $(libppcoin_server_a_SOURCES) $(libppcoin_common_a_SOURCES) $(libppcoin_cli_a_SOURCES)
+qt/bitcoinstrings.cpp: $(libpeercoin_server_a_SOURCES) $(libpeercoin_common_a_SOURCES) $(libpeercoin_cli_a_SOURCES)
 	@test -n $(XGETTEXT) || echo "xgettext is required for updating translations"
 	@cd $(top_srcdir); XGETTEXT=$(XGETTEXT) share/qt/extract_strings_qt.py
 
-translate: qt/bitcoinstrings.cpp $(QT_FORMS_UI) $(QT_FORMS_UI) $(PPCOIN_QT_CPP) $(PPCOIN_QT_H) $(PPCOIN_MM)
+translate: qt/bitcoinstrings.cpp $(QT_FORMS_UI) $(QT_FORMS_UI) $(PEERCOIN_QT_CPP) $(PEERCOIN_QT_H) $(PEERCOIN_MM)
 	@test -n $(LUPDATE) || echo "lupdate is required for updating translations"
 	@QT_SELECT=$(QT_SELECT) $(LUPDATE) $^ -locations relative -no-obsolete -ts qt/locale/bitcoin_en.ts
 
@@ -338,12 +338,12 @@ $(QT_QRC_CPP): $(QT_QRC) $(QT_QM) $(QT_FORMS_H) $(RES_ICONS) $(RES_IMAGES) $(RES
 	$(SED) -i.bak -e '/^\*\*.*Created:/d' $@ && rm $@.bak
 	$(SED) -i.bak -e '/^\*\*.*by:/d' $@ && rm $@.bak
 
-CLEAN_QT = $(nodist_qt_libppcoinqt_a_SOURCES) $(QT_QM) $(QT_FORMS_H) qt/*.gcda qt/*.gcno
+CLEAN_QT = $(nodist_qt_libpeercoinqt_a_SOURCES) $(QT_QM) $(QT_FORMS_H) qt/*.gcda qt/*.gcno
 
 CLEANFILES += $(CLEAN_QT)
 
 peercoin_qt_clean: FORCE
-	rm -f $(CLEAN_QT) $(qt_libppcoinqt_a_OBJECTS) $(qt_ppcoin_qt_OBJECTS) qt/ppcoin-qt$(EXEEXT) $(LIBPPCOINQT)
+	rm -f $(CLEAN_QT) $(qt_libpeercoinqt_a_OBJECTS) $(qt_peercoin_qt_OBJECTS) qt/peercoin-qt$(EXEEXT) $(LIBPEERCOINQT)
 
 peercoin_qt : qt/peercoin-qt$(EXEEXT)
 
