--- a/src/Makefile.test.include
+++ b/src/Makefile.test.include
@@ -1,9 +1,9 @@
 AM_CPPFLAGS +=  -I$(top_srcdir)/src/test/
 
-TESTS += test/test_ppcoin
-bin_PROGRAMS += test/test_ppcoin
+TESTS += test/test_peercoin
+bin_PROGRAMS += test/test_peercoin
 TEST_SRCDIR = test
-TEST_BINARY=test/test_ppcoin$(EXEEXT)
+TEST_BINARY=test/test_peercoin$(EXEEXT)
 
 TEST_DATA_DIR=$(top_srcdir)/src/test/data
 
@@ -19,7 +19,7 @@ TEST_DATA_FILES = \
   $(TEST_DATA_DIR)/tx_invalid.json \
   $(TEST_DATA_DIR)/tx_valid.json
 
-test_test_ppcoin_SOURCES = \
+test_test_peercoin_SOURCES = \
   test/allocator_tests.cpp \
   test/base32_tests.cpp \
   test/base58_tests.cpp \
@@ -49,33 +49,33 @@ test_test_ppcoin_SOURCES = \
   $(TEST_DATA_FILES)
 
 if ENABLE_WALLET
-test_test_ppcoin_SOURCES += \
+test_test_peercoin_SOURCES += \
   test/accounting_tests.cpp \
   test/wallet_tests.cpp
 endif
 
-# test_ppcoin binary #
-test_test_ppcoin_CPPFLAGS = $(AM_CPPFLAGS) $(TESTDEFS) \
+# test_peercoin binary #
+test_test_peercoin_CPPFLAGS = $(AM_CPPFLAGS) $(TESTDEFS) \
   -DTEST_DATA_DIR=$(TEST_DATA_DIR)
-test_test_ppcoin_LDADD = $(LIBPPCOIN_SERVER) $(LIBPPCOIN_CLI) $(LIBPPCOIN_COMMON) $(LIBLEVELDB) $(LIBMEMENV) \
+test_test_peercoin_LDADD = $(LIBPEERCOIN_SERVER) $(LIBPEERCOIN_CLI) $(LIBPEERCOIN_COMMON) $(LIBLEVELDB) $(LIBMEMENV) \
   $(BOOST_LIBS) $(BOOST_UNIT_TEST_FRAMEWORK_LIB)
 if ENABLE_WALLET
-test_test_ppcoin_LDADD += $(LIBPPCOIN_WALLET)
+test_test_peercoin_LDADD += $(LIBPEERCOIN_WALLET)
 endif
-test_test_ppcoin_LDADD += $(BDB_LIBS)
-test_test_ppcoin_LDFLAGS = $(AM_LDFLAGS)
+test_test_peercoin_LDADD += $(BDB_LIBS)
+test_test_peercoin_LDFLAGS = $(AM_LDFLAGS)
 
-nodist_test_test_ppcoin_SOURCES = $(TEST_DATA_FILES)
+nodist_test_test_peercoin_SOURCES = $(TEST_DATA_FILES)
 
 CLEANFILES += *.gcda *.gcno
 
-ppcoin_test: $(TEST_BINARY)
+peercoin_test: $(TEST_BINARY)
 
-ppcoin_test_check: $(TEST_BINARY) FORCE
+peercoin_test_check: $(TEST_BINARY) FORCE
 	$(MAKE) check-TESTS TESTS=$^
 
-ppcoin_test_clean : FORCE
-	rm -f $(CLEANFILES) $(test_test_ppcoin_OBJECTS) $(TEST_BINARY)
+peercoin_test_clean : FORCE
+	rm -f $(CLEANFILES) $(test_test_peercoin_OBJECTS) $(TEST_BINARY)
 
 %.json.h: %.json
 	@$(MKDIR_P) $(@D)
